--- a/front/html/login.html
+++ b/front/html/login.html
@@ -30,17 +30,16 @@
 
 <body>
 
-    <div class="row div1">
-        <div class="col-lg-3 col-md-3 col-sm-3 div1">
-            <a href="../html/index.html"><img src="../img/logo_itau_laranja.jpg" width="100" height="100"></a>
-        </div>
-        <div class="col-lg-7 col-md-7 col-sm-7 div1"></div>
-        <div class="col-lg-2 col-md-2 col-sm-2 div1"><br><b>DashCard System</b><br></div>
-
-    </div>
-    <br>
-
     <div class="container-fluid">
+        <div class="row div1 justify-content-between">
+            <div class="col-lg-3 col-md-3 col-sm-2 div1">
+                <img src="../img/logo_itau_laranja.jpg" width="100" height="100">
+            </div>
+            <!-- <div class="col-7 mx-auto div1"></div> -->
+            <div class="col-lg-2 col-md-3 col-sm-3 div1 align-self-center"><b>DashCard System</b></div>
+    
+        </div>
+
         <form id="login">
             <!-- Criando a área de resguardo dos campos do formulário-->
             <fieldset>
