subindo o projeto final!

--- a/front/html/transacoes.html
+++ b/front/html/transacoes.html
@@ -31,15 +31,15 @@
 <body onload="validaLogin()">
 
     <div class="container-fluid">
-
-        <div class="row div1">
-            <div class="col-lg-3 col-md-3 col-sm-3 div1">
-                <a href="../html/agentes.html"><img src="../img/logo_itau_laranja.jpg" width="100" height="100"></a>
+        <div class="row div1 justify-content-between">
+            <div class="col-lg-3 col-md-3 col-sm-2 div1">
+                <a href="../html/time.html"><img src="../img/logo_itau_laranja.jpg" width="100" height="100"></a>
             </div>
-            <div class="col-lg-7 col-md-7 col-sm-7 div1"></div>
-            <div class="col-lg-2 col-md-2 col-sm-2 div1"><br><b>DashCard System</b><br></div>
+            <!-- <div class="col-7 mx-auto div1"></div> -->
+            <div class="col-lg-2 col-md-3 col-sm-3 div1 align-self-center"><b>DashCard System</b></div>
+
         </div>
-        
+
         <div class="row justify-content-end">
             <div class="col-1">
                 <input type="submit" onclick="return logout()" value="Logout">
@@ -53,8 +53,9 @@
                 <a href="../html/agentes.html"><img src="../img/icone_voltar.jpg" width="50" height="50"></a>
             </div>
             <div class="col-lg-7 col-md-7 col-sm-7"></div>
-            
+
         </div>
+        <br>
 
         <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-3"></div>
