--- a/front/html/agentes.html
+++ b/front/html/agentes.html
@@ -30,12 +30,15 @@
 
 <body onload="validaLogin()">
     <div class="container-fluid">
-        <div class="row div1">
-            <div class="col-lg-3 col-md-3 col-sm-3 div1"><img src="../img/logo_itau_laranja.jpg" width="100"
-                    height="100"></div>
-            <div class="col-lg-7 col-md-7 col-sm-7 div1"></div>
-            <div class="col-lg-2 col-md-2 col-sm-2 div1"><br><b>DashCard System</b><br></div>
+        <div class="row div1 justify-content-between">
+            <div class="col-lg-3 col-md-3 col-sm-2 div1">
+                <img src="../img/logo_itau_laranja.jpg" width="100" height="100">
+            </div>
+            <!-- <div class="col-7 mx-auto div1"></div> -->
+            <div class="col-lg-2 col-md-3 col-sm-3 div1 align-self-center"><b>DashCard System</b></div>
+
         </div>
+    
 
         <div class="row justify-content-end">
             <div class="col-1">
@@ -46,7 +49,7 @@
 
 
         <div class="row w-100">
-            <div class="col-lg-2 col-md-2 col-sm-2" style="margin-left: 15px;" id="imgUser"></div>
+            <div class="col-lg-2 col-md-2 col-sm-2" style="margin-left: 10px;" id="imgUser"></div>
             <div class="col-8 my-auto" id="dadosUser" style="margin-left: 0px"></div>
 
         </div>
